--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -19,31 +19,51 @@ ul {
   clear: both;
   visibility: hidden; }
 
-.player {
-  position: relative;
-  width: 900px;
-  height: 400px;
-  background: #345444;
-  overflow: auto; }
+body {
+  font-family: 'Open Sans', sans-serif; }
 
-.main_video {
-  position: fixed; }
+p {
+  margin: 0; }
+
+section {
+  display: block;
+  height: auto;
+  max-width: 100%; }
+
+.container {
+  position: relative; }
+
+.video_container {
+  float: left; }
+
+.scroll_video {
+  padding: 10px;
+  width: 400px;
+  color: white;
+  height: 315px;
+  background: #000;
+  float: left;
+  overflow: auto; }
+  .scroll_video p {
+    margin-bottom: 10px; }
 
 .more_video {
-  margin-bottom: 20px; }
+  margin-bottom: 10px; }
   .more_video img {
     display: block;
     float: left; }
-  .more_video span {
-    margin-left: 10px; }
-  .more_video p {
-    margin: 0; }
+  .more_video a {
+    margin-left: 5px; }
 
-section {
-  color: #fff;
-  position: relative;
-  float: right;
-  display: block;
-  margin-right: 10px;
-  padding: 10px;
-  background-color: #000; }
+.player__loader {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #ccc;
+  z-index: 20;
+  opacity: 1;
+  visibility: visible;
+  -webkit-animation: hide-loader 200ms ease-out 5000ms forwards;
+          animation: hide-loader 200ms ease-out 5000ms forwards; }
