--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -20,50 +20,90 @@ ul {
   visibility: hidden; }
 
 body {
-  font-family: 'Open Sans', sans-serif; }
+  background-image: url("../img/background.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  margin: 0; }
 
 p {
   margin: 0; }
 
-section {
-  display: block;
-  height: auto;
-  max-width: 100%; }
+span {
+  display: block; }
 
-.container {
-  position: relative; }
+img {
+  display: inline-block; }
 
-.video_container {
-  float: left; }
+hr {
+  margin: 0; }
+
+.video_player {
+  position: relative;
+  width: 1000px;
+  background-color: #000; }
+
+.main_video {
+  display: inline-block; }
 
 .scroll_video {
-  padding: 10px;
-  width: 400px;
-  color: white;
-  height: 315px;
-  background: #000;
-  float: left;
-  overflow: auto; }
-  .scroll_video p {
-    margin-bottom: 10px; }
+  width: 320px;
+  height: 400px;
+  position: fixed;
+  display: inline-block;
+  color: #fff;
+  overflow: auto;
+  padding: 10px; }
+  .scroll_video img {
+    width: 100px;
+    height: 55px; }
 
-.more_video {
-  margin-bottom: 10px; }
-  .more_video img {
-    display: block;
-    float: left; }
-  .more_video a {
-    margin-left: 5px; }
+.preview {
+  display: inline-block; }
 
-.player__loader {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: #ccc;
-  z-index: 20;
-  opacity: 1;
-  visibility: visible;
-  -webkit-animation: hide-loader 200ms ease-out 5000ms forwards;
-          animation: hide-loader 200ms ease-out 5000ms forwards; }
+.description {
+  display: inline-block;
+  position: relative;
+  top: -20px; }
+  .description .cnt {
+    color: #7A7A7A; }
+
+.content_title {
+  border-bottom: 1px solid #DDDDDDFF;
+  width: 700px;
+  padding: 20px;
+  color: #4B6C94;
+  background-color: #fff; }
+  .content_title a {
+    color: #4B6C94; }
+  .content_title p {
+    font-size: 22px; }
+  .content_title li {
+    display: inline-block;
+    text-align: center;
+    margin-right: 20px; }
+    .content_title li:last-child {
+      margin-right: 0px; }
+  .content_title .link {
+    display: inline-block;
+    position: relative;
+    top: -10px;
+    padding-left: 10px; }
+  .content_title button {
+    background-color: #6383A8;
+    color: #fff;
+    height: 30px; }
+  .content_title .share {
+    background: url(../img/video_actions.png) no-repeat 0px -26px;
+    padding-left: 15px; }
+  .content_title .add {
+    background: url(../img/video_actions.png) no-repeat 0px 0px;
+    padding-left: 15px; }
+
+.adds_video {
+  width: 700px;
+  background-color: #fff;
+  padding: 20px; }
+  .adds_video p {
+    font-size: 18px; }
