--- a/frontend/sass/common.scss
+++ b/frontend/sass/common.scss
@@ -13,6 +13,7 @@ ul {
 	padding: 0;
 	margin:0;
 }
+
 .cf::after {
 	content:"";
 	display:block;
@@ -35,7 +36,7 @@ span {
 	display: block;
 }
 img {
-	display: inline-block;
+	//display: inline-block;
 }
 hr {
 	margin: 0;
